# mlx90641-driver-py

./: .gitignore  README.md  app-tests-jetson-nano-report.html  app-tests-rpi4-report.html  app-tests-ubuntu-pc-report.html  app-tests-win10-pc-report.html  mlx90641_dump.py  setup.cfg  setup.py
.github/workflows/: build-test-publish.yml  build_test_publish.yml  test-on-hardware-jetson-nano.yml  test-on-hardware-linux-pc.yml  test-on-hardware-rpi4.yml  test-on-hardware-win10-pc.yml
docs/: index.md
mlx90641/: __init__.py  cli.py  mlx90641.py
mlx90641/c-code/: Makefile  main.c
mlx90641/c-code/inc/: MLX90641_API.h  MLX90641_I2C_Driver.h  MLX90641_I2C_Driver_devtree.h  MLX90641_I2C_Driver_evb9064x.h  MLX90641_I2C_Driver_mcp2221.h  i2c.h  mlx90641_driver_register.h
mlx90641/c-code/src/: MLX90641_API.c  MLX90641_I2C_Driver_devtree.c  MLX90641_I2C_Driver_evb9064x.c  MLX90641_I2C_Driver_mcp2221.c  i2c.c  mlx90641_driver_register.c
mlx90641/libs/: .gitignore
tests/app_testing/: test_init.py
