[metadata]
name = mlx90641-driver
url = https://github.com/melexis-fir/mlx90641-driver-py
project_urls =
    Documentation = https://melexis-fir.github.io/mlx90641-driver-py/
    Source Code = https://github.com/melexis-fir/mlx90641-driver-py
    Issue Tracker = https://github.com/melexis-fir/mlx90641-driver-py/issues
license = Apache License, Version 2.0
author = Karel Vanroye
author_email = kva@melexis.com
maintainer = melexis-fir
description = MLX90641 Melexis thermal camera (16x12) rapid prototyping python package (on windows 10, linux pc, raspberry pi, jetson nano, beagle bone, ...)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Topic :: Utilities

[options]
packages = mlx90641
package_dir = mlx90641=mlx90641
include_package_data = true
python_requires = >= 3.6

[options.entry_points]
console_scripts =
    mlx90641-dump = mlx90641.cli:main

[options.package_data]
mlx90641 = 
    libs/**/*.dll
    libs/**/*.so
